<resources>
    <string name="app_name">Ucare</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="first">First name</string>
    <string name="last">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="date">Date of birth</string>
    <string name="nation">Nationality</string>
    <string name="state">State of Origin</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trans">Others</string>
    <string name="submit">SUBMIT</string>
    <string name="registered">Already registered? Login</string>
    <string name="login">Don\'t have an account? Register </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Ucare. Receive Healthcare Beyond Clinic</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dash_board">Ucare</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">Dashboard</string>
</resources>
