<?xml version="1.0" encoding="utf-8"?>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentScrim="#2589ff"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">


    <LinearLayout
            android:background="@drawable/gradient_layout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/doc2" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LAWSONCARE SIGN IN"
                android:fontFamily="@font/jura"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="21sp"/>

        </LinearLayout>
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:background="@drawable/nested_back"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/nested_back"
            android:layout_gravity="top|clip_vertical"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="10dp"
                app:cardUseCompatPadding="true"
                android:layout_margin="-10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp">

                    <EditText
                        android:labelFor="@string/email"
                        android:id="@+id/email"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawablePadding="10sp"
                        android:fontFamily="@font/lato"
                        android:ems="10"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp">

                    <EditText
                        android:labelFor="@id/password"
                        android:id="@+id/password"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:drawableStart="@drawable/ic_fingerprint_black_24dp"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/lato"
                        android:ems="10"
                        android:inputType="textPassword" />
                </LinearLayout>
                <Button
                    android:id="@+id/Login"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="Login"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/jura"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="230dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="170dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:id="@+id/textLog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="15sp"
                        android:textColor="#ee6e73"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:fontFamily="@font/jura"
                        android:text="@string/login" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>
